add stats api
